--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-	<title> UK Hospital </title>
+	<title> PREPRIMARY SCHOOL </title>
 	
 	
 </head>
@@ -14,8 +14,8 @@
 		<div style="background-image:url('assets/images/a.jpg');">
 		<p>
 			<br> <br>
-					Health Care Services  <br>
-			<font size="5px"> We Care About Your Health </font>
+					Eduacation System  <br>
+			<font size="5px"> We Care About Your Children Future </font>
 		</p> 
 		</div>
 	</div>
@@ -25,19 +25,25 @@
 			<table border="0">
 				<tr>
 					<td width="700px">
-						<font color="#000"> We are medical center </font> <br> <br>
+						<font color="#000"> We are Education center </font> <br> <br>
 
-					<font color="#000" size="5px"> We Have Medicare Plan Options for You! </font> <br> <br>
+					<font color="#000" size="5px"> We Have Students Academic  Plan Options for You! </font> <br> <br>
 
-Phasellus pretium orci sit amet mi ullamcorper egestas. Sed non mattis metus. Integer vel lorem tincidunt, pharetra eros nec, posuere odio. Nullam eget bibendum sem, venenatis lacinia justo. Duis aliquet lobortis neque, eget volutpat nulla iaculis a. <br><br>
+					At our institution, we take pride in offering diverse and flexible academic plan options that cater to the unique aspirations of each student. Our customized approach ensures that students can design their educational journey to align with their individual goals and interests. Whether they seek a challenging academic path through Advanced Placement (AP) or International Baccalaureate (IB) courses, wish to explore vocational training for practical skills, or prefer the convenience of online learning, we have it all covered. <br><br>
 
-In hac habitasse platea dictumst. Praesent condimentum justo justo, at ultricies diam accumsan vitae. Donec ac elementum diam. Ut quam orci, posuere quis lacus sed, vehicula rhoncus massa. Nunc volutpat nibh nulla, tincidunt egestas tellus faucibus nec. <br><br>
+					Additionally, our academic plan options encompass opportunities for dual enrollment, enabling students to earn college credits while still in high school. We also provide specialized support for students with unique needs through our comprehensive special education programs. Beyond academics, we promote holistic growth through a wide array of extracurricular activities, counseling services, internships, and academic competitions. Our mission is to empower students to make well-informed choices, excel academically, and develop into confident and accomplished individuals ready to embrace their future.
+
+
+
+
+
+					<br><br>
 <ul>
-<li> Nulla venenatis auctor quam, ac porta lectus dictum in
-<li>Aliquam sodales nisi sit amet lorem
-<li>Suspendisse vulputate tellus in justo convallis imperdiet
-<li>Morbi id lorem consequat, sodales mi non
-<li>Nulla venenatis auctor quam, ac porta lectus dictum in
+<li> School: Institution for formal education.
+<li>Teachers: Educators who guide students.
+<li>Classrooms: Learning spaces with necessary equipment.
+<li>Assessments: Tests, quizzes, and exams to evaluate progress.
+<li>Extracurriculars: Sports, arts, clubs, etc., for holistic development.
 </ul>
 <br>
  </td>
