--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -14,9 +14,9 @@
                   <div class="d-flex flex-column align-items-center text-center">
                     <img height="200" height="200" src="data:image/jpeg;base64,{{image}}" >
                     <div class="mt-3">
-                      <h4>{{doctor.name}}</h4>
-                      <p class="text-secondary mb-1">{{doctor.spl}}</p>
-                      <p class="text-muted font-size-sm">{{doctor.address}}</p>
+                      <h4>{{STUDENTS.name}}</h4>
+                      <p class="text-secondary mb-1">{{STUDENTS.section}}</p>
+                      <p class="text-muted font-size-sm">{{STUDENTS.address}}</p>
                      </div>
                   </div>
                 </div>
@@ -30,16 +30,16 @@
                       <h6 class="mb-0">Name</h6>
                     </div>
                     <div class="col-sm-9 text-secondary">
-                      {{doctor.name}}
+                      {{STUDENTS.name}}
                     </div>
                   </div>
                   <hr>
                   <div class="row">
                     <div class="col-sm-3">
-                      <h6 class="mb-0">Degree</h6>
+                      <h6 class="mb-0">Class</h6>
                     </div>
                     <div class="col-sm-9 text-secondary">
-                      {{doctor.degree}}
+                      {{STUDENTS.className}}
                     </div>
                   </div>
                   <hr>
@@ -48,25 +48,25 @@
                       <h6 class="mb-0">Phone</h6>
                     </div>
                     <div class="col-sm-9 text-secondary">
-                      {{doctor.phone}}
+                      {{STUDENTS.phone}}
                     </div>
                   </div>
                   <hr>
                   <div class="row">
                     <div class="col-sm-3">
-                      <h6 class="mb-0">Specialiazation</h6>
+                      <h6 class="mb-0">Section</h6>
                     </div>
                     <div class="col-sm-9 text-secondary">
-                     {{doctor.spl}}
+                     {{STUDENTS.section}}
                     </div>
                   </div>
                   <hr>
                   <div class="row">
                     <div class="col-sm-3">
-                      <h6 class="mb-0">Experience</h6>
+                      <h6 class="mb-0">FatherName</h6>
                     </div>
                     <div class="col-sm-9 text-secondary">
-                     {{doctor.exp}}
+                     {{STUDENTS.fatherName}}
                     </div>
                   </div>
                   <hr>
