--- a/src/app/upload/upload.component.html
+++ b/src/app/upload/upload.component.html
@@ -9,12 +9,12 @@
                 </div>
               <div class="col-xl-6">
                 <div class="card-body p-md-5 text-black">
-                  <h3 class="mb-5 text-uppercase">Dr. Registration</h3>
+                  <h3 class="mb-5 text-uppercase">STUDENTS Registration</h3>
   <div>{{resMessage}}</div>
                   <div class="row">
                     <div class="col-md-6 mb-4">
                       <div class="form-outline">
-                        <label class="form-label" for="form3Example1m">Dr.Name</label>
+                        <label class="form-label" for="form3Example1m">Name</label>
                      
                         <input type="text" name="name" [(ngModel)]="name" id="form3Example1m" class="form-control form-control-lg" />
                       </div>
@@ -24,9 +24,9 @@
                   <div class="row">
                     <div class="col-md-6 mb-4">
                       <div class="form-outline">
-                        <label class="form-label" for="form3Example1m">Dr.Degree</label>
+                        <label class="form-label" for="form3Example1m">Class</label>
                      
-                        <input type="text" name="name" [(ngModel)]="degree" id="form3Example1m" class="form-control form-control-lg" />
+                        <input type="text" name="name" [(ngModel)]="Class" id="form3Example1m" class="form-control form-control-lg" />
                       </div>
                     </div>
                    </div>
@@ -34,9 +34,9 @@
                    <div class="row">
                     <div class="col-md-6 mb-4">
                       <div class="form-outline">
-                        <label class="form-label" for="form3Example1m">Dr.Specialization</label>
+                        <label class="form-label" for="form3Example1m"> Section </label>
                      
-                        <input type="text" name="name" [(ngModel)]="spl" id="form3Example1m" class="form-control form-control-lg" />
+                        <input type="text" name="name" [(ngModel)]="Section" id="form3Example1m" class="form-control form-control-lg" />
                       </div>
                     </div>
                    </div>
@@ -44,9 +44,9 @@
                    <div class="row">
                     <div class="col-md-6 mb-4">
                       <div class="form-outline">
-                        <label class="form-label" for="form3Example1m">Dr.years of Exp</label>
+                        <label class="form-label" for="form3Example1m">FatherName</label>
                      
-                        <input type="text" name="name" [(ngModel)]="exp" id="form3Example1m" class="form-control form-control-lg" />
+                        <input type="text" name="name" [(ngModel)]="FatherName" id="form3Example1m" class="form-control form-control-lg" />
                       </div>
                     </div>
                    </div>
@@ -54,7 +54,7 @@
                    <div class="row">
                     <div class="col-md-6 mb-4">
                       <div class="form-outline">
-                        <label class="form-label" for="form3Example1m">Dr.Address</label>
+                        <label class="form-label" for="form3Example1m">Address</label>
                      
                         <input type="text" name="name" [(ngModel)]="address" id="form3Example1m" class="form-control form-control-lg" />
                       </div>
@@ -64,7 +64,7 @@
                    <div class="row">
                     <div class="col-md-6 mb-4">
                       <div class="form-outline">
-                        <label class="form-label" for="form3Example1m">Dr.Phone Number</label>
+                        <label class="form-label" for="form3Example1m">Phone Number</label>
                      
                         <input type="text" name="name" [(ngModel)]="phoneno" id="form3Example1m" class="form-control form-control-lg" />
                       </div>
@@ -77,7 +77,7 @@
   <br>
                    <div class="container row">
                     <div class="col-md-6">
-                        <input type="file" (change)="onFileChanged($event)">
+                        <input type="file" (change)="onFileChanged($event)"> choose student photo
                 
                     </div>
                 </div>
